Managed to connect the CSS file.

--- a/TestWebAPI/TestWebAPI/Pages/Index.cshtml
+++ b/TestWebAPI/TestWebAPI/Pages/Index.cshtml
@@ -22,8 +22,10 @@
                 }
             }
          </select>
+    </p>
+    <p>
+       <button type="submit" value="Отправить">Отправить</button>
     </p>    
-    <input type="submit" value="Отправить" />
 </form>
 
 <div id="chart_placeholder">
