added some styles and checking for errors

--- a/TestWebAPI/TestWebAPI/Pages/Index.cshtml
+++ b/TestWebAPI/TestWebAPI/Pages/Index.cshtml
@@ -29,7 +29,7 @@
 </form>
 
 <div id="chart_placeholder">
-  <label>Данные о Covid-19 по стране - @Model.Country </label>
+  <label class="text-chart-name">Данные о Covid-19 по стране - @Model.Country </label>
   <canvas id="myChart" width="60" height="30"></canvas>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
