--- a/TestWebAPI/TestWebAPI/Pages/Shared/_Layout.cshtml
+++ b/TestWebAPI/TestWebAPI/Pages/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <label>Covid-19 Out of Charts</label>
+        <label class="text-application-name">Covid-19 Out of Charts</label>
     </header>
     <div id="container">
         @RenderBody()
